cn/eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wsc2024-alb
  namespace: wsc2024
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: wsc2024-alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/subnets: subnet-01f752d1b12f0bd55, subnet-000b30c856c0609f2
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /healthcheck
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "5"
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "2"
    alb.ingress.kubernetes.io/healthy-threshold-count: "2"
    alb.ingress.kubernetes.io/unhealthy-threshold-count: "2"
    alb.ingress.kubernetes.io/target-group-attributes: deregistration_delay.timeout_seconds=0
    alb.ingress.kubernetes.io/security-groups: sg-008af94a69691ef15
    alb.ingress.kubernetes.io/manage-backend-security-group-rules: "true"
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /v1/customer
        pathType: Prefix
        backend:
          service:
            name: customer-service
            port:
              number: 80
      - path: /v1/product
        pathType: Prefix
        backend:
          service:
            name: product-service
            port:
              number: 80
      - path: /v1/order
        pathType: Prefix
        backend:
          service:
            name: order-service
            port:
              number: 80
